# fairlabel_tmp

./: .gitignore  README.md  pyproject.toml
config/: settings.toml
fairlabel/: EBM.py  config.py  data.py  log.py  models.py
fairlabel/web/: client.py  server.py  test.py  widgets.py  wizard.py
